--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.14.5"
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/lexend": "^5.1.0",
+    "@iconify-json/heroicons": "^1.2.0",
+    "astro": "^4.14.5",
+    "astro-iconify": "^1.2.0",
+    "flowbite": "^2.5.1",
+    "tailwindcss": "^3.4.11"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
