--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/lexend": "^5.1.0",
     "@iconify-json/heroicons": "^1.2.0",
     "@iconify-json/ic": "^1.2.0",
+    "aos": "^3.0.0-beta.6",
     "astro": "^4.14.5",
     "astro-iconify": "^1.2.0",
     "flowbite": "^2.5.1",
